--- a/index.html
+++ b/index.html
@@ -159,6 +159,15 @@
 
     </section> <!-- end s-about -->
 
+    <section id="video" class="s-home target-section" data-parallax="scroll" data-image-src="images/hero-bg1.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+        <div class="home-content">
+            <div class="row home-content__main">
+                <video width="2000" height="600" controls>
+                    <source src="https://mirror.rex69.workers.dev/0:/movies;tv/MUSIQOR_Video.mp4" type="video/mp4">
+                </video>                  
+            </div>
+        </div>
+    </section>
 
     <!-- services
     ================================================== -->
