--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="home-content">
             <div class="row home-content__main">
                 <video width="2000" height="600" controls>
-                    <source src="https://mirror.rex69.workers.dev/0:/movies;tv/MUSIQOR_Video.mp4" type="video/mp4">
+                    <source src="https://drive.google.com/file/d/1ASq96hdfECQAjwRM5-pjdQ0ynL24tKha/view?usp=sharing" type="video/mp4">
                 </video>                  
             </div>
         </div>
